--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "@1checkout/medusa-plugin-meilisearch",
-  "version": "1.0.0",
-  "files": [
-    ".medusa/server"
+  "name": "@rokmohar/medusa-plugin-meilisearch",
+  "version": "1.3.6",
+  "description": "Meilisearch plugin for Medusa 2",
+  "author": "Rok Mohar",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rokmohar/medusa-plugin-meilisearch.git"
+  },
+  "keywords": [
+    "medusa",
+    "medusa-v2",
+    "medusa-plugin",
+    "medusa-plugin-integration",
+    "medusa-plugin-meilisearch",
+    "medusa-plugin-search"
   ],
   "main": ".medusa/server/src/index.js",
   "exports": {
